# actormodel

./: CMakeLists.txt  README.md
actormodel/: CMakeLists.txt
actormodel/include/: application.h  common_macro_helpers.h  iresponse.h  requester_wrapper.h  stdafx.h
actormodel/src/: application.cpp  main.cpp  thread_message_dispatcher.cpp
services/: abstract_download_handler.cpp  abstract_download_handler.h  crawler_request.h  download_request.h  example_widget.cpp  example_widget.h  helpers.cpp  helpers.h  idownload_handler.h  math_operation_handler.cpp  math_operation_handler.h  math_operation_request.h  math_operation_response.h  named_thread.cpp  named_thread.h  page_parser_helpers.cpp  page_parser_helpers.h  pause_connections_request.h  qt_based_download_handler.cpp  qt_based_download_handler.h  random_interval_range_timer.cpp  random_interval_range_timer.h  reset_connections_request.h  reset_connections_response.h  thread_manager.cpp  thread_manager.h  unpause_connections_request.h  url.cpp  url.h
